# turing-machine

./: CMakeLists.txt  Cargo.toml  LICENSE  Makefile  README.md  tm.1
src/: hash.c  impl.c  impl.h  main.c  main.rs  tape.c  tape.h  tm1.rs  tm2.rs  tm3.rs  tm4.rs  tm5.rs  tm6.rs  turing.c  turing.h  turing.rs
